src/test/ui/or-patterns/exhaustiveness-unreachable-pattern.stderr
error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:7:9
   |
LL |         (1,) => {}
   |         ^^^^
   |
note: the lint level is defined here
  --> $DIR/exhaustiveness-unreachable-pattern.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:12:9
   |
LL |         (2,) => {}
   |         ^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:18:9
   |
LL |         (1 | 2,) => {}
   |         ^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:23:9
   |
LL |         (1, 3) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:24:9
   |
LL |         (1, 4) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:25:9
   |
LL |         (2, 4) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:26:9
   |
LL |         (2 | 1, 4) => {}
   |         ^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:28:9
   |
LL |         (1, 4 | 5) => {}
   |         ^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:36:9
   |
LL |         (Some(1),) => {}
   |         ^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:37:9
   |
LL |         (None,) => {}
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:42:9
   |
LL |         ((1..=4,),) => {}
   |         ^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:47:14
   |
LL |         (1 | 1,) => {}
   |              ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:51:19
   |
LL |         (0 | 1) | 1 => {}
   |                   ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:57:14
   |
LL |         0 | (0 | 0) => {}
   |              ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:57:18
   |
LL |         0 | (0 | 0) => {}
   |                  ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:65:13
   |
LL | /             Some(
LL | |                 0 | 0) => {}
   | |______________________^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:71:15
   |
LL |             | 0
   |               ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:73:15
   |
LL |             | 0] => {}
   |               ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:81:10
   |
LL |         [1
   |          ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:93:10
   |
LL |         [true
   |          ^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:100:36
   |
LL |         (true | false, None | Some(true
   |                                    ^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:105:14
   |
LL |             (true
   |              ^^^^
...
LL |         (true | false, None | Some(t_or_f!())) => {}
   |                                    --------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:116:14
   |
LL |         Some(0
   |              ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:135:19
   |
LL |                 | false) => {}
   |                   ^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:143:15
   |
LL |             | true) => {}
   |               ^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:149:15
   |
LL |             | true,
   |               ^^^^

error: aborting due to 26 previous errors

